--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="perfil">
         <div class="perfil-info">
           <h2>Oi, meu nome é Vinicius <b style="color: #bf062e; font-weight: bold;">Ferreira</b>,</h2>
-          <p>Estou cursando Engenharia da Computação na Unijorge com previsão de conclusão para 2024, e sou desenvolvedor em Front End.</p>    
+          <p>Estou cursando Engenharia da Computação na UniFacs com previsão de conclusão para 2024, e sou desenvolvedor em Front End.</p>    
         </div>
         <h4>Se quiser saber mais, clique no botão aqui em baixo e acesse meu curriculo completo!</h4>
         <a target="_blank" href="https://www.canva.com/design/DAEw2zDhm9k/1bDt7xp5tZs1inMb3vogHA/view?utm_content=DAEw2zDhm9k&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><input type="button" value="Saber Mais!"></a>
@@ -117,7 +117,7 @@
               <img src="imagens/unijorge.png" alt="">
               <div class="educacao-text">
                 <h3>Engenharia da Computação</h3>
-                <h2>Faculdade Unijorge</h2>
+                <h2>Faculdade UniFacs</h2>
               </div>
               <div class="educacao-li">
                 <li>Inicio: 2019</li>
