--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="titulo-txt">
           <h1 onclick="animacao1()" id="nome-titulo">Vinicius Ferreira</h1>
           <div class="line-titulo"></div>
-          <h3>Desenvolvedor Front End</h3>
+          <h3>Desenvolvedor Web</h3>
         </div><!--titulo-txt-->
       </div><!--titulo-->
 
@@ -84,11 +84,11 @@
     <section id="Perfil">
       <div class="perfil">
         <div class="perfil-info">
-          <h2>Oi, meu nome é Vinicius <b style="color: #bf062e; font-weight: bold;">Ferreira</b>,</h2>
-          <p>Estou cursando Engenharia da Computação na UniFacs com previsão de conclusão para 2024, e sou desenvolvedor em Front End.</p>    
+          <h2>Oi, eu sou Vinicius <span class="custom-name">Ferreira</span>.</h2>
+          <p>Estudante de Engenharia da Computação na UniFacs, com previsão de conclusão para o primeiro semestre de 2024, e sou Desenvolvedor Web</p>    
         </div>
-        <h4>Se quiser saber mais, clique no botão aqui em baixo e acesse meu curriculo completo!</h4>
-        <a target="_blank" href="https://www.canva.com/design/DAEw2zDhm9k/1bDt7xp5tZs1inMb3vogHA/view?utm_content=DAEw2zDhm9k&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><input type="button" value="Saber Mais!"></a>
+        <h4>Se desejar obter mais informações, clique no botão abaixo para acessar meu currículo completo!</h4>
+        <a target="_blank" href="https://drive.google.com/file/d/1nLit-l119iXgyS6eF_fXI_KcnMR2toeN/view?usp=sharing"><input type="button" value="Saber Mais!"></a>
       </div>
     </section>
 
@@ -102,12 +102,12 @@
             <div class="educacao-single-top">
               <img src="imagens/fronend2.png" alt="">
               <div class="educacao-text">
-                <h3>Front End</h3>
-                <h2>Danki Code</h2>
+                <h3>Desenvolvimento Web</h3>
+                <h2>Front-End e Python</h2>
               </div>           
               <div class="educacao-li">
-                <li>Inicio: 2021</li>
-                <li>Conclusão: 2022</li>
+                <li>Início: 2021</li>
+                <li>Conclusão: Atual</li>
             </div>
           </div>
             
@@ -120,7 +120,7 @@
                 <h2>Faculdade UniFacs</h2>
               </div>
               <div class="educacao-li">
-                <li>Inicio: 2019</li>
+                <li>Início: 2019</li>
                 <li>Conclusão: 2024</li>
               </div>    
             </div>
@@ -133,7 +133,7 @@
                 <h2>Fundação José Carvalho</h2>
               </div>
               <div class="educacao-li">
-                <li>Inicio: 2014</li>
+                <li>Início: 2014</li>
                 <li>Conclusão: 2016</li>
               </div>    
             </div>
@@ -180,19 +180,23 @@
               <h2>Assistente de Ti Help Desk</h2>
               <h3>Acbeu Maple Bear</h3>
               <h4>Fev 2022 - Atualmente</h4>
-              <p>Atendimento e suporte técnico aos usuários, resolução de chamados, suporte presencial e remoto, e manutenção de notebooks e desktops.</p>
+              <p>Fornecimento de suporte técnico e atendimento aos usuários, incluindo a
+                resolução de chamados, assistência presencial e remota, bem como
+                manutenção de notebooks e desktops.</p>
             </div>
             <div class="prof2">
               <h2>Estágio de Suporte de Ti</h2>
               <h3>Acbeu Maple Bear</h3>
               <h4>Jul 2021 - Jan 2022</h4>
-              <p>Atendimento e suporte técnico aos usuários, resolução de chamados, suporte presencial e remoto, e manutenção de notebooks e desktops.</p>
+              <p>Realização de atendimento aos usuários através de suporte técnico presencial
+                e manutenção de computadores.</p>
             </div>
             <div class="prof3">
               <h2>Estágio de Suporte Técnico</h2>
               <h3>Núcleo Raimundo Almir</h3>
               <h4>Jan 2019 - Dez 2020</h4>
-              <p>Realização de atendimento aos clientes internos, por meio de suporte técnico presencial e manutenção de computadores</p>
+              <p>Prestação de atendimento direto aos clientes por meio de suporte técnico
+                presencial.</p>
             </div>
           </div>
 
@@ -216,7 +220,7 @@
                   <img src="imagens/frontend.png" alt="">
                 </div>
                 <div class="titulo-curso">
-                  <h3>Front End</h3>
+                  <h3>Front-End</h3>
                 </div>
                 <div class="descrisao-cursos">
                   <p>Desenvolvimento da interface gráfica do usuário de um site.</p>
@@ -307,7 +311,7 @@
                     <h3>Css</h3>
                   </div>
                   <div class="descrisao-habilidades">
-                    <p>Nivel: Intemediário</p>
+                    <p>Nivel: Avançado</p>
                   </div>
   
                 </div>
@@ -332,7 +336,7 @@
                     <h3>React</h3>
                   </div>
                   <div class="descrisao-habilidades">
-                    <p>Nivel: Basico</p>
+                    <p>Nivel: Intermediário</p>
                   </div>
                 </div>
   
@@ -341,10 +345,10 @@
                     <img src="imagens/ad.png" alt="">
                   </div>
                   <div class="titulo-habilidade">
-                    <h3>Active Directory</h3>
+                    <h3>Python</h3>
                   </div>
                   <div class="descrisao-habilidades">
-                    <p>Nivel: Avançado</p>
+                    <p>Nivel: Intermediário</p>
                   </div>
                 </div>
 
@@ -413,7 +417,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+                <textarea placeholder="Seu texto" class="form-control" name="message" rows="10" required></textarea>
               </div>
               <button type="submit" class="btn btn-lg btn-dark btn-block">Enviar</button>
             </form>
@@ -424,14 +428,10 @@
               <h4>E-mail</h4>
               <p>Vini_ferreiram@hotmail.com</p>
               <h4>Celular</h4>
-              <p>(71) 9 9627-7162</p>
-              <div class="img">
-                <img src="imagens/footerimg.png" alt="">
-              </div>
-              
+              <p>(71) 9 98179-8029</p>
             </div>
             <div class="RedesSociais">
-              <a target="_blank" href="https://wa.me/+5571996277162"
+              <a target="_blank" href="https://wa.me/+5571981798029"
                 ><img src="imagens/whatsapp.png" alt=""
               /></a>
               <a target="_blank" href="https://www.instagram.com/vinybfm/"
